--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Page 1</h1>
             </div>
             <div class="section">
-                <h2>Page 2</h2>
+                <!-- <h2>Page 2</h2>  -->
             </div>
         </div>
 
