--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     </head>
     <body>
         <div id="fullview">
-            <div class="section">
-                <h1>Page 1</h1>
+            <div class="section main">
+                <h1>Home Page</h1>
             </div>
-            <div class="section">
-                <!-- <h2>Page 2</h2>  -->
+            <div class="section news">
+                <h2>News Page</h2> 
+            </div>
+            <div class="section faq">
+                <h2>Faq page</h2>
             </div>
         </div>
 
