landing page done

--- a/index.html
+++ b/index.html
@@ -5,31 +5,58 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="./fullview.css">
+        <!-- <link rel="stylesheet" href="./fullview.css"> -->
         <title>Spydur Research</title>
     </head>
     <body>
         <div id="fullview">
+            <div class="banner">
+            </div>
+            <button class="faq_button" type="button"> FAQ</button>
             <div class="section main">
-                <h1>Home Page</h1>
+                <!-- <h1>Home Page</h1> -->
+                <div class = "main_bg">
+                    <!-- <div class="banner">
+                        <button class="faq_button" type="button"> FAQ</button>
+                    </div> -->
+                    <div class="main_bg_text">
+                        <h1 class="title">Spydur</h1>
+                        <h3 class="subtitle">Research made easy</h3>
+                    </div>
+                    <img class="bg_img" src="/Assets/landing_page_bg.jpeg" alt="">
+                    <div class="main_search_bar">
+                        <input id="search_bar_main" type="text" placeholder="Search Department or Professor">
+                    </div>
+
+                    <div class="news_arrow">
+                        <p>Scroll down for news</p>
+                        <p>&darr;</p>
+                    </div>
+                </div>
             </div>
             <div class="section news">
-                <h2>News Page</h2> 
+                <!-- <div class="banner"></div> -->
+                <div>
+
+                </div>
             </div>
             <div class="section faq">
-                <h2>Faq page</h2>
+                <!-- <div class="banner"></div> -->
+                <!-- <div class="FAQ_section">
+
+                </div> -->
             </div>
         </div>
 
 
 
-        <script  src="https://code.jquery.com/jquery-3.5.1.min.js"  crossorigin="anonymous"></script>
+        <!-- <script  src="https://code.jquery.com/jquery-3.5.1.min.js"  crossorigin="anonymous"></script>
         <script src="./fullview.js"></script>
         <script>
             $(document).ready(function () {
                 $("#fullview").fullView();
             });
-        </script>
+        </script> -->
         <script src="./script.js"></script>
     </body>
 </html>
