working on news

--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
                     </div>
                 </div>
             </div>
-            <div class="section news">
+            <div class="section news_sec">
                 <!-- <div class="banner"></div> -->
-                <div>
-
+                <div id="news_body">
+                    <div class="news_title">
+                        <h1>NEWS</h1>
+                    </div>
+                    <div class="news_section">
+                        <div class="news"></div>
+                        <div class="news"></div>
+                        <div class="news"></div>
+                    </div>
                 </div>
             </div>
-            <div class="section faq">
-                <!-- <div class="banner"></div> -->
-                <!-- <div class="FAQ_section">
-
-                </div> -->
-            </div>
+            <!-- <div class="section faq">
+            </div> -->
         </div>
 
 
