--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <h1 class="title">Spydur</h1>
                         <h3 class="subtitle">Research made easy</h3>
                     </div>
-                    <img class="bg_img" src="/Assets/landing_page_bg.jpeg" alt="">
+                    <img class="bg_img" src="Assets/landing_page_bg.jpeg" alt="">
                     <div class="main_search_bar">
                         <input id="search_bar_main" type="text" placeholder="Search Department or Professor">
                     </div>
