--- a/departments.html
+++ b/departments.html
@@ -1,1 +1,41 @@
-<!-- page for the computer science departments search -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="./fullview.css"> -->
+        <title>Spydur_Research/Departments/</title>
+    </head>
+    <body>
+        <div class="banner">
+            <button type = "button" id = "home_button"><a href ="index.html">HOME</a></button> 
+            <h1>Spydur Research</h1>
+            <span></span>
+        </div>
+        <div class="Department_sec">
+            <div id="department_body">
+                <div class="department_title">
+                    <h1>Departments</h1>
+                </div>
+                <div class="department_section">
+                    <div class="department"></div>
+                    <div class="department"></div>
+                    <div class="department"></div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- <script  src="https://code.jquery.com/jquery-3.5.1.min.js"  crossorigin="anonymous"></script>
+        <script src="./fullview.js"></script>
+        <script>
+            $(document).ready(function () {
+                $("#fullview").fullView();
+            });
+        </script> -->
+        <script src="./script.js"></script>
+    </body>
+</html>
