--- a/prof_profile.html
+++ b/prof_profile.html
@@ -1,1 +1,44 @@
 <!-- page for the professor profile page -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="profpage.css">
+        <title>Spydur Research</title>
+    </head>
+    <body>
+		<div class="banner">
+			<center><h1>Professor Name</h1></center>
+		</div>
+		<button class="faq_button" type="button"> FAQ</button>
+		<div id="container">
+			<div id="left_container">
+				<div id="department">
+					<div id="top">Department</div>
+					Text
+				</div>
+				<div id="research_name">
+					<div id="top">Project Name</div>
+					Text
+				</div>
+				<div id="desc">
+					<div id="top">Description</div>
+					Text
+				</div>
+				<div id="responsibilities">
+					<div id="top">Responsibilities</div>
+					Text
+				</div>
+			</div>
+			<div id="right_container">
+				<div id="picture">placeholder picture</div>
+				<div id="button">button placeholder </div>
+			</div>
+
+
+		</div>
+
+    </body>
+</html>
