working on faq page

--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,49 @@
 <!-- FAQ page -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="faq.css">
+        <title>FAQ</title>
+    </head>
+    <body>
+        <div class="banner">
+            <button class="faq_button" type="button"> FAQ</button>
+            <h1 class="header">Spydur Research</h1>
+            <span></span>
+        </div>
+        <div id="faq_body">
+            <div class="topic">
+                <h1 class="question">What is Summer Research?</h1>
+                <p class="answer"> 
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga distinctio nemo adipisci assumenda dicta obcaecati numquam eveniet facilis similique, sapiente pariatur soluta necessitatibus minus repudiandae tempora molestiae minima vel rem!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, consectetur harum repudiandae nulla nemo optio perspiciatis mollitia velit ea molestiae laudantium, quasi, voluptatem asperiores numquam fuga animi dolore eligendi tenetur.
+                </p>
+            </div>
+            <div class="topic">
+                <h1 class="question">What should you do for Summer Research?</h1>
+                <p class="answer">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus deserunt facere quas distinctio dolor error exercitationem illum explicabo placeat similique assumenda voluptate recusandae atque sint deleniti ea, qui perferendis?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos labore odio sint ratione dicta, beatae quae itaque nostrum vero consectetur commodi accusamus fugiat cumque culpa debitis. Laboriosam, ea aperiam. 
+                </p>
+            </div>
+            <div class="topic">
+                <h1 class="question">Frequently asked question about Summer Research</h1>
+                <p class="answer">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ab similique dignissimos aspernatur optio architecto, culpa quod porro molestiae itaque, numquam aut perferendis quas omnis nulla totam maxime quo illum.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem nihil accusantium deserunt illum cumque nulla exercitationem voluptatum non ut, ullam voluptas praesentium modi porro consequatur! Alias, molestias modi. Provident, assumenda.
+                </p>
+            </div>
+            <div class="topic">
+                <h1 class="question">Application information</h1>
+                <p class="answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae accusamus ullam reprehenderit ea id repellendus, sit qui repellat officiis, suscipit ratione laborum voluptatem mollitia molestiae, veniam vel dolorem aliquid numquam.</p>
+            </div>
+            <div class="topic">
+                <h1 class="question">Other helpful resources</h1>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eaque eligendi, dolor officiis maxime repellat quo sed id quisquam officia labore soluta, possimus cumque assumenda iusto incidunt. Molestiae, officiis debitis.</p>
+            </div>
+        </div>
+    </body>
+</html>
