--- a/prof_profile.html
+++ b/prof_profile.html
@@ -15,26 +15,26 @@
 		<button class="faq_button" type="button"> FAQ</button>
 		<div id="container">
 			<div id="left_container">
-				<div id="department">
+				<div class="text-box" id="department">
 					<div id="top">Department</div>
 					Text
 				</div>
-				<div id="research_name">
+				<div class="text-box" id="research_name">
 					<div id="top">Project Name</div>
 					Text
 				</div>
-				<div id="desc">
+				<div class="text-box" id="desc">
 					<div id="top">Description</div>
 					Text
 				</div>
-				<div id="responsibilities">
+				<div class="text-box" id="responsibilities">
 					<div id="top">Responsibilities</div>
 					Text
 				</div>
 			</div>
 			<div id="right_container">
 				<div id="picture">placeholder picture</div>
-				<div id="button">button placeholder </div>
+				<button type="button" id="button">Apply </button>
 			</div>
 
 
