added learn more button

--- a/departments.html
+++ b/departments.html
@@ -20,9 +20,15 @@
                     <h1>Departments</h1>
                 </div>
                 <div class="department_section">
-                    <div class="department"></div>
-                    <div class="department"></div>
-                    <div class="department"></div>
+                    <div class="department">
+                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                    </div>
+                    <div class="department">
+                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                    </div>
+                    <div class="department">
+                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                    </div>
                 </div>
             </div>
         </div>
