dep page styling

--- a/departments.html
+++ b/departments.html
@@ -21,13 +21,19 @@
                 </div>
                 <div class="department_section">
                     <div class="department">
-                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                        <img src="" alt="">
+                        <div class="prof_name">Professor Name</div>
+                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
                     </div>
                     <div class="department">
-                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                        <img src="" alt="">
+                        <div class="prof_name">Professor Name</div>
+                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
                     </div>
                     <div class="department">
-                        <button type="button"><a href="./prof_profile.html">Learn More</a></button>
+                        <img src="" alt="">
+                        <div class="prof_name">Professor Name</div>
+                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
                     </div>
                 </div>
             </div>
