--- a/departments.html
+++ b/departments.html
@@ -14,27 +14,19 @@
             <h1>Spydur Research</h1>
             <span></span>
         </div>
-        <div class="Department_sec">
-            <div id="department_body">
+        
+        <div class="Department_sec" id = "container">
+            <div  class ="item_container" id="department_body">
                 <div class="department_title">
-                    <h1>Departments</h1>
+                    <h2>Department: Computer Science</h3>
                 </div>
                 <div class="department_section">
-                    <div class="department">
-                        <img src="" alt="">
-                        <div class="prof_name">Professor Name</div>
-                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
-                    </div>
-                    <div class="department">
-                        <img src="" alt="">
-                        <div class="prof_name">Professor Name</div>
-                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
-                    </div>
-                    <div class="department">
-                        <img src="" alt="">
-                        <div class="prof_name">Professor Name</div>
-                        <button class="dep_button" type="button"><a href="./prof_profile.html">Learn More</a></button>
-                    </div>
+                    <!-- <div class="department">
+                        <img src = "images/bhatka.jpg" width = 200 height = 200 id = "dep_pic"> 
+                        <p id = "prof_name">Dr. Bhatka</p>
+                        <p id = "prof_info">Info</p>
+                        <button type = "button" id = "learn_more"><a href ="prof_profile.html">Learn More About Dr. Bhatka's Program</a></button>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -48,6 +40,7 @@
                 $("#fullview").fullView();
             });
         </script> -->
-        <script src="./script.js"></script>
+        <script src="script.js" type="text/javascript"></script>
+        <script src="department_info.js" type="text/javascript"></script>
     </body>
 </html>
