--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <body>
         <div id="fullview">
             <div class="banner">
-                <button class="faq_button" type="button"> FAQ</button>
+                <!-- change this to menu -->
+                <button class="faq_button" type="button"><a href="./faq.html">FAQ</a></button>
             </div>
             <div class="section main">
                 <!-- <h1>Home Page</h1> -->
@@ -25,7 +26,10 @@
                     </div>
                     <img class="bg_img" src="Assets/landing_page_bg.jpeg" alt="">
                     <div class="main_search_bar">
-                        <input id="search_bar_main" type="text" placeholder="Search Department or Professor">
+                        <!-- <form id="search_bar_main" action="#" onsubmit="check_input()">
+                            <input id="search_bar_main" type="text" placeholder="Search Department or Professor" >
+                        </form> -->
+                        <button id="search_bar_main"><a href="./departments.html">Search Department or Professor</a></button>
                     </div>
 
                     <div class="news_arrow">
