--- a/prof_profile.html
+++ b/prof_profile.html
@@ -10,9 +10,10 @@
     </head>
     <body>
 		<div class="banner">
-			<center><h1>Professor Name</h1></center>
+			<button class="faq_button" type="button"> FAQ</button>
+			<h1>Professor Name</h1>
+			<span></span>
 		</div>
-		<button class="faq_button" type="button"> FAQ</button>
 		<div id="container">
 			<div id="left_container">
 				<div class="text-box" id="department">
