added menu button

--- a/departments.html
+++ b/departments.html
@@ -10,7 +10,13 @@
     </head>
     <body>
         <div class="banner">
-            <button type = "button" id = "home_button"><a href ="index.html">HOME</a></button> 
+            <div id="menu">
+                <button class="menu_button">MENU</button>
+                <div class="sub_menu">
+                    <a href="index.html">Home</a>
+                    <a href="faq.html">FAQ</a>
+                </div>
+            </div> 
             <h1>Spydur Research</h1>
             <span></span>
         </div>
