--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <div id="fullview">
             <div class="banner">
                 <!-- change this to menu -->
-                <button class="faq_button" type="button"><a href="./faq.html">FAQ</a></button>
+                <!-- <button class="faq_button" type="button"><a href="./faq.html">FAQ</a></button> -->
+                <div id="menu">
+                    <button class="menu_button">MENU</button>
+                    <div class="sub_menu">
+                        <a href="departments.html">Departments</a>
+                        <a href="faq.html">FAQ</a>
+                    </div>
+                </div>
             </div>
             <div class="section main">
                 <!-- <h1>Home Page</h1> -->
