--- a/faq.html
+++ b/faq.html
@@ -10,7 +10,13 @@
     </head>
     <body>
         <div class="banner">
-            <button class="faq_button" type="button"> FAQ</button>
+            <div id="menu">
+                <button class="menu_button">MENU</button>
+                <div class="sub_menu">
+                    <a href="index.html">Home</a>
+                    <a href="departments.html">Departments</a>
+                </div>
+            </div>
             <h1 class="header">Spydur Research</h1>
             <span></span>
         </div>
