finished with styling

--- a/index.html
+++ b/index.html
@@ -52,9 +52,28 @@
                         <h1>NEWS</h1>
                     </div>
                     <div class="news_section">
-                        <div class="news"></div>
-                        <div class="news"></div>
-                        <div class="news"></div>
+                        <div class="news">
+                            <div class="news_img">
+                                <img src="/Assets/rats_news.jpg" alt="placeholder">
+                            </div>
+                            <a class="news_links" href="https://news.richmond.edu/releases/article/-/16721/research-scientists-at-university-of-richmond-teach-rats-to-drive-results-may-inform-treatment-for-mental-health-issues-.html">
+                                Research Scientists at University of Richmond Teach Rats to Drive; Results May Inform Future Research Strategies for Mental Health Treatments
+                            </a>
+                        </div>
+
+                        <div class="news">
+                            <div class="news_img">
+                                <img src="" alt="placeholder">
+                            </div>
+                            <a class="news_links" href="">Placeholder title</a>
+                        </div>
+                        
+                        <div class="news">
+                            <div class="news_img">
+                                <img src="" alt="placeholder">
+                            </div>
+                            <a class="news_links" href="">Placeholder title</a>
+                        </div>
                     </div>
                 </div>
             </div>
