--- a/prof_profile.html
+++ b/prof_profile.html
@@ -10,32 +10,59 @@
     </head>
     <body>
 		<div class="banner">
-			<button class="faq_button" type="button"> FAQ</button>
-			<h1>Professor Name</h1>
-			<span></span>
-		</div>
+            <div id="menu">
+                <button class="menu_button">MENU</button>
+                <div class="sub_menu">
+                    <a href="index.html">Home</a>
+                    <a href="departments.html">Departments</a>
+                    <a href="faq.html">FAQ</a>
+                </div>
+            </div>
+            <h1 class="header">Professor Name</h1>
+            <span></span>
+        </div>
 		<div id="container">
 			<div id="left_container">
 				<div class="text-box" id="department">
-					<div id="top">Department</div>
-					Text
+					<div class="top">Department</div>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Quis, perferendis. Soluta ullam cumque magnam officiis ad 
+						porro, animi voluptates accusantium unde earum deserunt perspiciatis. 
+						Aliquid magnam quod eum pariatur dolores.
+					</p>
 				</div>
 				<div class="text-box" id="research_name">
-					<div id="top">Project Name</div>
-					Text
+					<div class="top">Project Name</div>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Quis, perferendis. Soluta ullam cumque magnam officiis ad 
+						porro, animi voluptates accusantium unde earum deserunt perspiciatis. 
+						Aliquid magnam quod eum pariatur dolores.
+					</p>
 				</div>
 				<div class="text-box" id="desc">
-					<div id="top">Description</div>
-					Text
+					<div class="top">Description</div>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Quis, perferendis. Soluta ullam cumque magnam officiis ad 
+						porro, animi voluptates accusantium unde earum deserunt perspiciatis. 
+						Aliquid magnam quod eum pariatur dolores.
+					</p>
 				</div>
 				<div class="text-box" id="responsibilities">
-					<div id="top">Responsibilities</div>
-					Text
+					<div class="top">Responsibilities</div>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Quis, perferendis. Soluta ullam cumque magnam officiis ad 
+						porro, animi voluptates accusantium unde earum deserunt perspiciatis. 
+						Aliquid magnam quod eum pariatur dolores.
+					</p>
 				</div>
 			</div>
 			<div id="right_container">
 				<div id="picture">placeholder picture</div>
-				<button type="button" id="button">Apply </button>
+				<button type="button" id="button"><a href="">Apply</a></button>
 			</div>
 
 
