--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="faq.css">
-        <title>FAQ</title>
+        <title>Spydur Research</title>
     </head>
     <body>
         <div class="banner">
