added to script for departments to prof page shift

--- a/prof_profile.html
+++ b/prof_profile.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="profpage.css">
+		<script src="script.js" defer></script>
         <title>Spydur Research</title>
     </head>
     <body>
@@ -18,7 +19,7 @@
                     <a href="faq.html">FAQ</a>
                 </div>
             </div>
-            <h1 class="header">Professor Name</h1>
+            <h1 class="header" id="prof_name">Professor Name</h1>
             <span></span>
         </div>
 		<div id="container">
@@ -61,7 +62,9 @@
 				</div>
 			</div>
 			<div id="right_container">
-				<div id="picture">placeholder picture</div>
+				<div id="picture">
+					
+				</div>
 				<button type="button" id="button"><a href="">Apply</a></button>
 			</div>
 
