--- a/departments.html
+++ b/departments.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
         <!-- <link rel="stylesheet" href="./fullview.css"> -->
         <title>Spydur_Research/Departments/</title>
     </head>
@@ -30,7 +31,7 @@
 
                     <div class="department">
                         <div class = "dep_pic">
-                            <img src = "/Assets/rana.png" alt="professor image"> 
+                            <img src = "Assets/rana.png" alt="professor image"> 
                         </div>
                         <h2 class = "prof_name">Dr. Rana</h2>
                         <p class = "prof_info">
@@ -79,7 +80,7 @@
 
 
 
-        <script src="script.js" type="text/javascript"></script>
+        <!-- <script src="script.js" type="text/javascript"></script> -->
         <!-- <script src="department_info.js" type="text/javascript"></script> -->
     </body>
 </html>
