bugs should be fixed

--- a/index.html
+++ b/index.html
@@ -59,20 +59,42 @@
                             <a class="news_links" href="https://news.richmond.edu/releases/article/-/16721/research-scientists-at-university-of-richmond-teach-rats-to-drive-results-may-inform-treatment-for-mental-health-issues-.html">
                                 Research Scientists at University of Richmond Teach Rats to Drive; Results May Inform Future Research Strategies for Mental Health Treatments
                             </a>
+                            <div class="news_sum">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus 
+                                nesciunt ducimus suscipit doloribus voluptatum repellendus nihil consequatur? 
+                                Magni odio molestiae, labore veniam cumque consequuntur iusto ratione maxime 
+                                consequatur ipsa vel.
+                            </div>
                         </div>
 
                         <div class="news">
                             <div class="news_img">
-                                <img src="" alt="placeholder">
+                                <img src="/Assets/UR_grant.jpg" alt="placeholder">
                             </div>
-                            <a class="news_links" href="">Placeholder title</a>
+                            <a class="news_links" href="https://news.richmond.edu/releases/article/-/22443/university-of-richmond-awarded-625k-hhmi-grant-to-study-barriers-to-student-inclusivity.html?utm_source=news&utm_medium=referral&utm_campaign=releases-story">
+                                University of Richmond Awarded $625K HHMI Grant to Study Barriers to Student Inclusivity
+                            </a>
+                            <div class="news_sum">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus 
+                                nesciunt ducimus suscipit doloribus voluptatum repellendus nihil consequatur? 
+                                Magni odio molestiae, labore veniam cumque consequuntur iusto ratione maxime 
+                                consequatur ipsa vel.
+                            </div>
                         </div>
                         
                         <div class="news">
                             <div class="news_img">
-                                <img src="" alt="placeholder">
+                                <img src="/Assets/NIH.jpg" alt="placeholder">
                             </div>
-                            <a class="news_links" href="">Placeholder title</a>
+                            <a class="news_links" href="https://news.richmond.edu/releases/article/-/21699/ur-awarded-nearly-250k-nih-grant-for-biomedical-research-funding-will-support-11-faculty-and-70+-research-students.html?utm_source=related-stories&utm_medium=referral&utm_campaign=releases-story">
+                                UR Awarded Nearly $250K NIH Grant For Biomedical Research; Funding Will Support 11 Faculty and 70+ Research Students
+                            </a>
+                            <div class="news_sum">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus 
+                                nesciunt ducimus suscipit doloribus voluptatum repellendus nihil consequatur? 
+                                Magni odio molestiae, labore veniam cumque consequuntur iusto ratione maxime 
+                                consequatur ipsa vel.
+                            </div>
                         </div>
                     </div>
                 </div>
