--- a/departments.html
+++ b/departments.html
@@ -45,7 +45,7 @@
                 
                     <div class="department">
                         <div class = "dep_pic">
-                            <img src = "" alt="professor image"> 
+                            <img src = "Assets/shaw.jpg" alt="professor image"> 
                         </div>
                         <h2 class = "prof_name">Dr. Shaw</h2>
                         <p class = "prof_info">
