changed menu button

--- a/departments.html
+++ b/departments.html
@@ -6,17 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
-        <!-- <link rel="stylesheet" href="./fullview.css"> -->
-        <title>Spydur_Research/Departments/</title>
+        <title>Spydur Research</title>
     </head>
     <body>
         <div class="banner">
             <div id="menu">
-                <button class="menu_button">MENU</button>
-                <div class="sub_menu">
-                    <a href="index.html">Home</a>
-                    <a href="faq.html">FAQ</a>
-                </div>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
             </div> 
             <h1>Spydur Research</h1>
             <span></span>
