--- a/faq.html
+++ b/faq.html
@@ -11,12 +11,9 @@
     <body>
         <div class="banner">
             <div id="menu">
-                <button class="menu_button">MENU</button>
-                <div class="sub_menu">
-                    <a href="index.html">Home</a>
-                    <a href="departments.html">Departments</a>
-                </div>
-            </div>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
+            </div> 
             <h1 class="header">Spydur Research</h1>
             <span></span>
         </div>
@@ -24,31 +21,52 @@
             <div class="topic">
                 <h1 class="question">What is Summer Research?</h1>
                 <p class="answer"> 
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga distinctio nemo adipisci assumenda dicta obcaecati numquam eveniet facilis similique, sapiente pariatur soluta necessitatibus minus repudiandae tempora molestiae minima vel rem!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, consectetur harum repudiandae nulla nemo optio perspiciatis mollitia velit ea molestiae laudantium, quasi, voluptatem asperiores numquam fuga animi dolore eligendi tenetur.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Fuga distinctio nemo adipisci assumenda dicta obcaecati numquam eveniet facilis similique, 
+                    sapiente pariatur soluta necessitatibus minus repudiandae tempora molestiae minima vel rem!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, 
+                    consectetur harum repudiandae nulla nemo optio perspiciatis mollitia velit 
+                    ea molestiae laudantium, quasi, voluptatem asperiores numquam 
+                    fuga animi dolore eligendi tenetur.
                 </p>
             </div>
             <div class="topic">
                 <h1 class="question">What should you do for Summer Research?</h1>
                 <p class="answer">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus deserunt facere quas distinctio dolor error exercitationem illum explicabo placeat similique assumenda voluptate recusandae atque sint deleniti ea, qui perferendis?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos labore odio sint ratione dicta, beatae quae itaque nostrum vero consectetur commodi accusamus fugiat cumque culpa debitis. Laboriosam, ea aperiam. 
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Fuga distinctio nemo adipisci assumenda dicta obcaecati numquam eveniet facilis similique, 
+                    sapiente pariatur soluta necessitatibus minus repudiandae tempora molestiae minima vel rem!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, 
+                    consectetur harum repudiandae nulla nemo optio perspiciatis mollitia velit 
+                    ea molestiae laudantium, quasi, voluptatem asperiores numquam 
+                    fuga animi dolore eligendi tenetur.
                 </p>
             </div>
             <div class="topic">
                 <h1 class="question">Frequently asked question about Summer Research</h1>
                 <p class="answer">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ab similique dignissimos aspernatur optio architecto, culpa quod porro molestiae itaque, numquam aut perferendis quas omnis nulla totam maxime quo illum.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem nihil accusantium deserunt illum cumque nulla exercitationem voluptatum non ut, ullam voluptas praesentium modi porro consequatur! Alias, molestias modi. Provident, assumenda.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Fuga distinctio nemo adipisci assumenda dicta obcaecati numquam eveniet facilis similique, 
+                    sapiente pariatur soluta necessitatibus minus repudiandae tempora molestiae minima vel rem!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, 
+                    consectetur harum repudiandae nulla nemo optio perspiciatis mollitia velit 
+                    ea molestiae laudantium, quasi, voluptatem asperiores numquam 
+                    fuga animi dolore eligendi tenetur.
                 </p>
             </div>
             <div class="topic">
                 <h1 class="question">Application information</h1>
-                <p class="answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae accusamus ullam reprehenderit ea id repellendus, sit qui repellat officiis, suscipit ratione laborum voluptatem mollitia molestiae, veniam vel dolorem aliquid numquam.</p>
+                <p class="answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                     Recusandae accusamus ullam reprehenderit ea id repellendus, sit qui repellat officiis, 
+                     suscipit ratione laborum voluptatem mollitia molestiae, veniam vel dolorem aliquid numquam.
+                </p>
             </div>
             <div class="topic">
                 <h1 class="question">Other helpful resources</h1>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eaque eligendi, dolor officiis maxime repellat quo sed id quisquam officia labore soluta, possimus cumque assumenda iusto incidunt. Molestiae, officiis debitis.</p>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eaque eligendi, 
+                    dolor officiis maxime repellat quo sed id quisquam officia labore soluta, possimus cumque assumenda 
+                    iusto incidunt. Molestiae, officiis debitis.
+                </p>
             </div>
         </div>
     </body>
