--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
         <div id="fullview">
             <div class="banner">
-                <!-- change this to menu -->
-                <!-- <button class="faq_button" type="button"><a href="./faq.html">FAQ</a></button> -->
                 <div id="menu">
-                    <button class="menu_button">MENU</button>
+                    <!-- <button class="menu_button">MENU</button>
                     <div class="sub_menu">
                         <a href="departments.html">Departments</a>
                         <a href="faq.html">FAQ</a>
-                    </div>
+                    </div> -->
+                    <a href="index.html">Home</a>
+                        <a href="faq.html">FAQ</a>
                 </div>
             </div>
             <div class="section main">
@@ -69,7 +69,7 @@
 
                         <div class="news">
                             <div class="news_img">
-                                <img src="/Assets/UR_grant.jpg" alt="placeholder">
+                                <img src="Assets/UR_grant.jpg" alt="placeholder">
                             </div>
                             <a class="news_links" href="https://news.richmond.edu/releases/article/-/22443/university-of-richmond-awarded-625k-hhmi-grant-to-study-barriers-to-student-inclusivity.html?utm_source=news&utm_medium=referral&utm_campaign=releases-story">
                                 University of Richmond Awarded $625K HHMI Grant to Study Barriers to Student Inclusivity
@@ -84,7 +84,7 @@
                         
                         <div class="news">
                             <div class="news_img">
-                                <img src="/Assets/NIH.jpg" alt="placeholder">
+                                <img src="Assets/NIH.jpg" alt="placeholder">
                             </div>
                             <a class="news_links" href="https://news.richmond.edu/releases/article/-/21699/ur-awarded-nearly-250k-nih-grant-for-biomedical-research-funding-will-support-11-faculty-and-70+-research-students.html?utm_source=related-stories&utm_medium=referral&utm_campaign=releases-story">
                                 UR Awarded Nearly $250K NIH Grant For Biomedical Research; Funding Will Support 11 Faculty and 70+ Research Students
