add Grant photo

--- a/departments.html
+++ b/departments.html
@@ -55,7 +55,7 @@
 
                     <div class="department">
                         <div class = "dep_pic">
-                            <img src = "" alt="professor image"> 
+                            <img src = "Assets/szajda.jpeg" alt="professor image"> 
                         </div>
                         <h2 class = "prof_name">Dr. Szajda</h2>
                         <p class = "prof_info">
